; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_utilities.c_insert_v.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/snowball/libstemmer/extr_utilities.c_insert_v.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.SN_env = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @insert_v(%struct.SN_env* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.SN_env*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.SN_env* %0, %struct.SN_env** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load %struct.SN_env*, %struct.SN_env** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @SIZE(i32* %12)
  %14 = load i32*, i32** %8, align 8
  %15 = call i32 @insert_s(%struct.SN_env* %9, i32 %10, i32 %11, i32 %13, i32* %14)
  ret i32 %15
}

declare dso_local i32 @insert_s(%struct.SN_env*, i32, i32, i32, i32*) #1

declare dso_local i32 @SIZE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
